Updated bar mouse color while editing

--- a/src/main/resources/codeEditor.css
+++ b/src/main/resources/codeEditor.css
@@ -16,15 +16,21 @@
     -fx-fill: #017fb6;
 }
 
-#codeEditor .line-number {
+#codeEditor .lineno {
     -fx-background-color: #333333;
-    -fx-text-fill: gray;
     -fx-background-insets: 0;
     -fx-padding: 0 6px;
     -fx-alignment: CENTER_RIGHT;
-}
-
-#codeEditor .paragraph-box .line .number {
+    -fx-font-style: normal;
     -fx-border-color: #333333;
     -fx-border-width: 0 0 0 2;
+    -fx-pref-height: 1.0;
+}
+
+#codeEditor .lineno .text {
+    -fx-fill: #949494;
+}
+
+#codeEditor .caret {
+    -fx-stroke: white;
 }
