Little anim on number line

--- a/src/main/resources/codeEditor.css
+++ b/src/main/resources/codeEditor.css
@@ -31,6 +31,10 @@
     -fx-fill: #949494;
 }
 
+#codeEditor .lineno:hover .text {
+    -fx-fill: #cccccc;
+}
+
 #codeEditor .caret {
     -fx-stroke: white;
 }
